--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,15 @@
+/* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Poppins:wght@400;700&display=swap');
-*{
+
+/* General Reset */
+* {
     margin: 0;
     padding: 0;
-    font-family: "poppins";
-    font-weight: 400;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    margin: 0;
     font-family: 'Arial', sans-serif;
 }
 
@@ -29,9 +31,9 @@ header {
 }
 
 .logo p {
-    margin: 0;
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: #4caf50;
+    font-weight: bold;
 }
 
 nav ul {
@@ -83,6 +85,54 @@ nav a:hover {
     background-color: #ffc107;
 }
 
+/* User Profile */
+.user-profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-logo {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-left: 20px;
+}
+
+.user-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+.user-icon img {
+    width: 70%;
+    height: 70%;
+    border-radius: 50%;
+}
+
+.store-background {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #FFB74D;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+}
+
+/* Media Queries for Mobile Responsiveness */
 @media screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
@@ -103,6 +153,10 @@ nav a:hover {
     }
 
     .search {
+        margin-top: 10px;
+    }
+
+    .user-profile {
         margin-top: 10px;
     }
 }
