--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,3 +160,26 @@ nav a:hover {
         margin-top: 10px;
     }
 }
+
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: auto;
+    padding: 1rem 0rem;
+}
+
+footer p {
+    margin: 0;
+    font-size: 0.9em;
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        font-size: 0.8em;
+    }
+}
