--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,6 @@
-/* Import fonts */
-@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Poppins:wght@400;700&display=swap');
-
-/* General Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
+/* styles.css */
 body {
+    margin: 0;
     font-family: 'Arial', sans-serif;
 }
 
@@ -31,9 +22,9 @@ header {
 }
 
 .logo p {
-    font-size: 1.5em;
+    margin: 0;
+    font-size: 1.2em;
     color: #4caf50;
-    font-weight: bold;
 }
 
 nav ul {
@@ -132,7 +123,6 @@ nav a:hover {
     border-top-right-radius: 50%;
 }
 
-/* Media Queries for Mobile Responsiveness */
 @media screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
@@ -161,6 +151,110 @@ nav a:hover {
     }
 }
 
+.container {
+    display: grid;
+    gap: 1rem;
+    min-height: 100vh;
+}
+
+.category {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    gap: 1rem;
+}
+
+.product {
+    position: relative;
+    max-height: auto;
+    border: 1px solid #ddd;
+    padding: 15px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    line-height: 1.5rem;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.product:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+img {
+    max-width: 100%;
+    height: 200px;
+    object-fit: fill;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+    margin-bottom: 1rem;
+}
+
+.product:hover img {
+    transform: scale(1.05);
+}
+
+.productbtns button {
+    margin-top: 1rem;
+    cursor: pointer;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+
+.productbtns button:hover {
+    background-color: #ffc107;
+}
+
+.qyt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.qyt input {
+    width: 30px;
+    border-radius: 0.1rem;
+    border: 0.1rem solid #4caf50;
+    transition: border-color 0.3s ease-in-out;
+}
+
+.price {
+    color: #ffc107;
+    font-weight: 600;
+    margin: 0 0;
+}
+
+.qyt input,
+.qyt label {
+    margin: 0px 10px;
+}
+
+.product h3 {
+    margin: 0 0;
+}
+
+.image-placeholder {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 1rem;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.image-placeholder:hover {
+    transform: scale(1.05);
+}
 
 footer {
     background-color: #333;
